<resources>
    <string name="app_name">Character recognition</string>
    <string name="contact_us">contact us</string>
    <string name="about_us">about us</string>
    <string name="test">Test</string>
    <string name="exit">exit</string>
    <string name="about_us.txt">
            The Lollipop Android development team is actually
            a producer of Android software. Lollipop company is
            a knowledge-based company. which is run by trainees.
            You can support our company and improve efficient software.
            Thanks for using our products.
    </string>
    <string name="contact_us.txt">
            The support team of Lollipop company is by your side in this section
        Respond to your problems, comments and criticisms.
        Please, in order to speed up and facilitate the response, your question in the form of a
        Send a message. Your message will be checked and answered as soon as possible will be given.
        Thank you for your patience.
    </string>
    <string name="id_telegram">NRAI0811</string>
    <string name="id_eitaa">NrAi0811</string>
    <string name="number">+14046063522</string>
    <string name="guide">guide</string>
    <string name="very_interesting_personality_test_by_answering_a_few_questions_you_can_test_your_personality_and_learn_about_your_inner_secrets_please_answer_honestly">Very interesting personality test. By answering a few questions, you can test your personality and learn about your inner secrets. Please answer honestly.</string>
    <string name="txt_guide">Very interesting personality test. By answering a few questions, you can test your personality and learn about your inner secrets. Please answer honestly.</string>
    <string name="resource">resource</string>
    <string name="txt_counter">"question 1 from 13"</string>
    <string name="question1">"1)What kind of bird would you like to be?"</string>
    <string name="question1_1">" Sparrow"</string>
    <string name="question1_2">" Flamingo"</string>
    <string name="question1_3">" Penguin"</string>
    <string name="question1_4">" Owl"</string>
    <string name="question1_5">" Swallow"</string>
    <string name="question2">"2)Which musical instrument do you like?"</string>
    <string name="question2_1">"Piano"</string>
    <string name="question2_2">"Violin"</string>
    <string name="question2_3">"Harmonica"</string>
    <string name="question2_4">"Guitar"</string>
    <string name="question2_5">"Def"</string>
    <string name="question3">"3)Suppose you are the characteristic of someone's face, which part of his face are you?"</string>
    <string name="question3_1">"Wrinkle"</string>
    <string name="question3_2">"Stain"</string>
    <string name="question3_3">"Beauty mole"</string>
    <string name="question3_4">"Freckles"</string>
    <string name="question3_5">"Smile"</string>
    <string name="question4">"4)Which TV show is more interesting to you?"</string>
    <string name="question4_1">"News and documentary programs"</string>
    <string name="question4_2">"Drama and biography films"</string>
    <string name="question4_3">"Emotional and police"</string>
    <string name="question4_4">"Love and adventure"</string>
    <string name="question4_5">"Comedy and cartoons"</string>
    <string name="question5">"5) Which of the game city games do you like the most?"</string>
    <string name="question5_1">"High-speed roller coasters"</string>
    <string name="question5_2">"Train or Boat"</string>
    <string name="question5_3">"Comedy show and performance"</string>
    <string name="question5_4">"Ferris wheel and fast spinning devices"</string>
    <string name="question5_5">"None, I hate amusement parks"</string>
    <string name="question6">"6)Do you laugh at your own mistakes?"</string>
    <string name="question6_1">"Never"</string>
    <string name="question6_2">"rarely"</string>
    <string name="question6_3">"Sometime"</string>
    <string name="question6_4">"mostly"</string>
    <string name="question6_5">"So much so that some people think I'm crazy."</string>
    <string name="question7">"7)Are you interested in animals?"</string>
    <string name="question7_1">"At all"</string>
    <string name="question7_2">"Few animals"</string>
    <string name="question7_3">"Some animals"</string>
    <string name="question7_4">"Most animals"</string>
    <string name="question7_5">"All animals"</string>
    <string name="question8">"8)What is your motto in your life?"</string>
    <string name="question8_1">"Time is money"</string>
    <string name="question8_2">"Get up early to be good"</string>
    <string name="question8_3">"What you like for yourself, like for others"</string>
    <string name="question8_4">"Live and let others live"</string>
    <string name="question8_5">"Don't worry, come what may"</string>
    <string name="question9">"9)What is the opinion of others about you most often?"</string>
    <string name="question9_1">"Ruthless"</string>
    <string name="question9_2">"Cold and emotionless"</string>
    <string name="question9_3">""Beautiful""</string>
    <string name="question9_4">"lovely"</string>
    <string name="question9_5">"have fun"</string>
    <string name="question10">"10)What is the first thing that comes to your mind when you wake up in the morning?"</string>
    <string name="question10_1">"work or study"</string>
    <string name="question10_2">"life problems"</string>
    <string name="question10_3">"Breakfast"</string>
    <string name="question10_4">"The day ahead of you"</string>
    <string name="question10_5">"what you will do till night"</string>
    <string name="question11">"11)If your friend hit you, how would you react?"</string>
    <string name="question11_1">"you get angry"</string>
    <string name="question11_2">"you get upset"</string>
    <string name="question11_3">"interesting to you"</string>
    <string name="question11_4">"you retaliate"</string>
    <string name="question11_5">"You retaliate many times over"</string>
    <string name="question12">"12)Which of the game city games do you like the most?"</string>
    <string name="question12_1">"high-speed roller coasters"</string>
    <string name="question12_2">"train or boat"</string>
    <string name="question12_3">"Comedy show and performance"</string>
    <string name="question12_4">"Carousel and things that spin fast"</string>
    <string name="question12_5">"None, I hate amusement parks."</string>
    <string name="question13">"13)Are you smiling?"</string>
    <string name="question13_1">"Never"</string>
    <string name="question13_2">"rarely"</string>
    <string name="question13_3">"sometimes"</string>
    <string name="question13_4">"mostly"</string>
    <string name="question13_5">"as much as possible"</string>
    <string name="text_result">"The result of the personality test"</string>
    <string name="result_1">"This means that you are a white lily. People appreciate you for your perseverance, dedication and success. You have clear goals and your thoughts are focused on your work. You are probably the first child in the family. You hardly express your feelings. do. One of your most important concerns is how you appear in front of different people. Your thoughts tend to be a bit pessimistic. You have self-confidence, but sometimes you don't trust yourself inside."</string>
    <string name="result_2">"It means that you are a rose. You have a little beard, but you have a lot of beauty. You have a sense of humor, but you enjoy hearing jokes. You are probably the middle child in the family. People like to be around you. You are warm-hearted. Many close friends. You see life realistically. You know that life consists of good and bad. You can test your luck according to the capital you have. You are hardworking and stick to your goals. You like to be yourself. And this gives you confidence. The most difficult problem in your life is monotony. Monotony in any matter bothers you and makes your mood dull."</string>
    <string name="result_3">"This means that you are a sunflower in a bed of roses. There is a distinct feature in you that warms others and makes you stand out. You may be the youngest child in the family or the only child. You are serious when necessary, but your friends know you as a funny person. You enjoy telling jokes. Sometimes you are mischievous. You like to meet new and interesting people in your life. People who never laugh. You are not comfortable. You have a positive outlook on life. You look for the good in everything. You are not a willow that shakes with any wind. You are warm, loving, faithful and sociable, and each of these traits can be a reason for your goodness. You have unlimited energy, but your motivation is low."</string>
</resources>