<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".testing_Activity"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="7"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_counter"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="left"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_question1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question1"
                android:textColor="@color/full_purple"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/buttonstyle_1"
                android:onClick="texts_click"
                android:padding="4dp"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_question2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question2"
                android:textColor="@color/full_purple"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/buttonstyle_1"
                android:onClick="texts_click"
                android:padding="4dp"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/tx_question3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question3"
                android:textColor="@color/full_purple"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/buttonstyle_1"
                android:onClick="texts_click"
                android:padding="7dp"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_question4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question4"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:background="@drawable/buttonstyle_1"
                android:gravity="center"
                android:onClick="texts_click"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">
            <TextView
                android:id="@+id/txt_question5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question5"
                android:textColor="#150d1d"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/buttonstyle_1"
                android:onClick="texts_click"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>